# cbtEngine

./: .gitignore  CMakeLists.txt  CleanUp_Linux.sh  CleanUp_Windows.bat  LICENSE  README.md  RunPremake_Linux.sh  linux_cleanup.sh  linux_run_premake5.sh  premake5.lua  windows_cleanup.bat  windows_run_premake.bat
assets/shaders/GL/: cbtBlur.frag  cbtFPass.frag  cbtGPass.frag  cbtGeometry.vert  cbtGreyscale.frag  cbtInvert.frag  cbtLPass.frag  cbtOutline.frag  cbtScreenQuad.vert  cbtSkybox.frag  cbtSkybox.vert
dependencies/GLEW/lib/: ReadMe.txt
dependencies/SDL/lib/win64/: SDL2.lib  SDL2main.lib
dependencies/irrKlang/lib/win64/: irrKlang.lib
src/CBTCore/: CBT.h  CBTMacros.h  CBTMain.h
src/CBTCore/Application/: CBTApplication.cpp  CBTApplication.h
src/CBTCore/Audio/AudioEngine/: CBTAudioEngine.h
src/CBTCore/Core/CommandQueue/: CBTCommandQueue.h
src/CBTCore/Core/Event/: CBTEvent.h  CBTEventDispatcher.h  CBTEventListener.h
src/CBTCore/Core/FileUtil/: CBTFileUtil.h
src/CBTCore/Debug/: CBTDebug.h
src/CBTCore/Input/: CBTInput.cpp  CBTInput.h  CBTInputEvent.h  CBTKeycode.h
src/CBTGame/Application/: Sandbox.cpp  Sandbox.h
src/CBTGame/Scene/: GameScene.cpp  GameScene.h
src/cbtCore/: cbt.h  cbtMacros.h  cbtMain.h
src/cbtCore/Application/: cbtApplication.cpp  cbtApplication.h
src/cbtCore/Debug/: cbtDebug.h
src/cbtCore/Input/: cbtInput.cpp  cbtInput.h  cbtInputEvent.h  cbtKeycode.h
src/cbtGame/Application/: Sandbox.cpp  Sandbox.h
src/cbtGame/Scene/: GameScene.cpp
src2/cbtCore/Input/: cbtInputEvent.h
src2/cbtGame/Scene/: GameScene.h
(+225 files in other folders)
